# hyper-folder

./: Cargo.toml  README.md
src/: args.rs  main.rs  state.rs
src/routes/: fallback.rs
templates/: index.html
