[package]
name = "hyper-folder"
publish = false
version = "0.2.2"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
axum = "0.7.1"
camino = "1.1.7"
clap = { version = "4.5.8", features = ["derive"] }
hyper = "1.0.1"
mime_guess = "2.0.4"
serde = { version = "1.0.198", features = ["derive"] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.0", features = [
	"compression-gzip",
	"compression-zstd",
	"trace",
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
